--- a/src/app/modules/Accounting/ledger-account/ledger-account.component.scss
+++ b/src/app/modules/Accounting/ledger-account/ledger-account.component.scss
@@ -1,6 +1,23 @@
-mat-form-field{
+mat-form-field {
+    width       : 98%;
     margin-right: 15px;
 }
-.mat-column-AccountNatureId,.mat-column-AccountGroupId,.mat-column-GeneralLedgerName,.mat-column-ParentId{
-    flex: 1 1 130px;
+
+.mat-column-AccountNatureId,
+.mat-column-AccountGroupId,
+.mat-column-GeneralLedgerName,
+.mat-column-ContactNo,
+.mat-column-ContactName,
+.mat-column-Email,
+.mat-column-Address,
+.mat-column-AccountSubGroupId {
+    flex: 1 0 150px;
+}
+
+.mat-column-GeneralLedgerId {
+    flex: 1 0 70px;
+}
+.mat-column-Active,
+.mat-column-Action{
+    flex: 1 0 100px;
 }
