--- a/src/app/modules/appconfigdata/userreportconfigColumns/userreportconfigcolumns.component.html
+++ b/src/app/modules/appconfigdata/userreportconfigColumns/userreportconfigcolumns.component.html
@@ -18,18 +18,18 @@
                     </mat-form-field>
                     <mat-form-field appearance="outline" [style.width.px]="200">
                         <mat-label>My Report Name</mat-label>
-                        <mat-select formControlName="searchReportName">
+                        <mat-select formControlName="searchReportName" (selectionChange)="EnableButton()">
                             <mat-option *ngFor="let item of AppReportNames" [value]="item.ReportConfigItemId">
                                 {{item.ReportName}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                    <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
-                        (click)="GetReportConfigItem()">
-                         <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+                    <button [disabled]="loading || !boolEnableButton" matTooltip="search" mat-raised-button
+                        color="accent" (click)="GetReportConfigItem()">
+                        <mat-icon>search</mat-icon>
+                        <mat-icon *ngIf="loading">
+                            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                        </mat-icon>
                     </button>
                 </div>
             </form>
@@ -37,7 +37,7 @@
                 <ng-container matColumnDef="ReportName">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Column Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                           {{element.ReportName}}
+                        {{element.ReportName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="DisplayName">
@@ -79,11 +79,12 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef> 
-                            <mat-checkbox matTooltip="select all" style="margin-right: 15px;"
-                                (click)="$event.stopPropagation()" (change)="SelectAll($event)">
-                            </mat-checkbox>                        
-                        Active </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox matTooltip="select all" style="margin-right: 15px;"
+                            (click)="$event.stopPropagation()" (change)="SelectAll($event)">
+                        </mat-checkbox>
+                        Active
+                    </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
                             [checked]="element.Active==1?true:false">
@@ -92,17 +93,18 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="SaveAll()">
+                        <button [disabled]="loading || ReportConfigItemList.length==0" matTooltip="add new" mat-mini-fab
+                            (click)="SaveAll()">
                             <mat-icon>all_out</mat-icon>
-                <mat-icon *ngIf="loading">
-                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                </mat-icon>
+                            <mat-icon *ngIf="loading">
+                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                            </mat-icon>
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
                         <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save"
                             mat-mini-fab (click)="Save(element)">
-                             <mat-icon>save</mat-icon>
+                            <mat-icon>save</mat-icon>
                             <mat-icon *ngIf="loading">
                                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
                             </mat-icon>
