--- a/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.html
+++ b/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.html
@@ -7,7 +7,15 @@
     <div style="width: 100%;">
         <form [formGroup]="searchForm">
             <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Evaluation</mat-label>
+                <mat-label>Exam/Test/Session</mat-label>
+                <mat-select formControlName="searchExamId">
+                    <mat-option [value]="0">select</mat-option>
+                    <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline" [style.width.px]="200">
+                <mat-label>Evaluation type</mat-label>
                 <mat-select formControlName="searchEvaluationMasterId" (selectionChange)="GetEvaluationMasterId()">
                     <mat-option *ngFor="let item of EvaluationNames" [value]="item.EvaluationMasterId">{{item.EvaluationName}}
                     </mat-option>
@@ -29,14 +37,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Exam/Evaluation session/Test</mat-label>
-                <mat-select formControlName="searchExamId">
-                    <mat-option [value]="0">select</mat-option>
-                    <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+           
             <button [disabled]="loading" mat-raised-button color="accent" (click)="GetEvaluationClassSubjectMap()">
                  <mat-icon>search</mat-icon>
                             <mat-icon *ngIf="loading">
@@ -54,7 +55,7 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="EvaluationName">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Evaluation Name
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Evaluation type
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     {{element.EvaluationName}}
@@ -89,7 +90,7 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="ExamId">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Exam/Evaluation Session
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Exam/Test/Session
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field appearance="outline">
