--- a/src/app/modules/evaluation/studentevaluation/studentevaluation.component.scss
+++ b/src/app/modules/evaluation/studentevaluation/studentevaluation.component.scss
@@ -1,5 +1,5 @@
 mat-form-field{
-    margin-right:30px;
+    margin-right:15px;
     width: 99%;
 }
 button{
@@ -7,6 +7,7 @@ button{
 }
 mat-cell:first-of-type {
     padding-left: 0px;
+    width: 70px;
 }
 
 .mat-column-RatingId //, .mat-column-CategoryId,.mat-column-SubCategoryId
@@ -25,7 +26,7 @@ mat-cell:first-of-type {
     flex:1 0 150px;
 }
 .mat-column-AutoId{
-    flex:1 0 80px;
+    flex:1 1 80px;
 }
 .mat-column-Action,
 .mat-column-Active
@@ -34,5 +35,5 @@ mat-cell:first-of-type {
     flex:1 0 100px;
 }
 .mat-column-Detail,.mat-column-Description,.mat-column-AnswerOptionsId{
-    flex:1 0 350px;
+    flex:10 0 400px;
 }
