--- a/src/app/modules/student/addstudentclass/addstudentclass.component.scss
+++ b/src/app/modules/student/addstudentclass/addstudentclass.component.scss
@@ -3,7 +3,9 @@ mat-form-field {
   width       : 98%;
   max-width   : 250px;
 }
-
+mat-cell:first-of-type{
+  padding-left: 0px;
+}
 button {
   margin-right: 15px;
 }
