--- a/src/app/modules/studentactivity/sportsresult/sportsresult.component.scss
+++ b/src/app/modules/studentactivity/sportsresult/sportsresult.component.scss
@@ -7,12 +7,12 @@ mat-form-field {
   button {
     margin-right: 15px;
   }
-  
-
+ 
 .mat-column-SportResultId
 {
     flex:1 0 80px;
 }
+.mat-column-Secured,
 .mat-column-Active,
 .mat-column-Action{
     flex:1 0 100px;
